--- a/doc/USER_MANUAL/06_fault_sources.tex
+++ b/doc/USER_MANUAL/06_fault_sources.tex
@@ -553,16 +553,16 @@ in \texttt{DATA/STATIONS}.
 \item Rupture time files are named $\mathtt{Rupture\_time\_FAULT}$-$\mathtt{id}$.
 One file is generated for each fault. The files are ascii and start
 with a header (12 lines long) followed by a data block with the following
-format, one line per fault node:
+format, one line per fault node:\newline
 
 
-Column 1 = horizontal coordinate, distance along strike (m)
+Column 1 = horizontal coordinate, distance along strike (m)\newline
 
 
-Column 2 = vertical coordinate, distance down-dip (m)
+Column 2 = vertical coordinate, distance down-dip (m)\newline
 
 
-Column 3 = rupture time (s)
+Column 3 = rupture time (s)\newline
 
 \item Fault quantities (slip, slip rate, stresses, etc) at regular times
 are stored in binary data files called $\mathtt{Snapshot\#it\#.bin}$,
