--- a/doc/USER_MANUAL/09_noise_simulations.tex
+++ b/doc/USER_MANUAL/09_noise_simulations.tex
@@ -155,7 +155,7 @@ one integer, which is the ID of the `main' receiver. For example,
 if this file contains 5, it means that the fifth receiver listed in
 \texttt{DATA/STATIONS} becomes the `main'. That's why we mentioned
 previously that the order of receivers in \texttt{DATA/STATIONS} is
-important.
+important.\newline
 
 
 Note that in some simulations, the \texttt{DATA/STATIONS} might
