--- a/doc/USER_MANUAL/13_changing_the_model.tex
+++ b/doc/USER_MANUAL/13_changing_the_model.tex
@@ -100,7 +100,7 @@ $Q_{\kappa}$ and $Q_{\mu}$ respectively \citep{AnHa78}.
 Note that Qmu is always equal to Qs, but Qkappa is in general not equal to Qp. To convert one to the other see doc/note\_on\_Qkappa\_versus\_Qp.pdf and utils/attenuation/conversion\_from\_Qkappa\_Qmu\_to\_Qp\_Qs\_from\_Dahlen\_Tromp\_959\_960.f90.
 For simulations with attenuation, please note that the Vp- and Vs-velocities of your model are given for a reference
 frequency. To change this reference frequency, you change the value
-of \texttt{ATTENUATION\_f0\_REFERENCE} defined (in Hz) in input file \texttt{DATA/Par\_file}.
+of \texttt{ATTENUATION\_f0\_REFERENCE} defined (in Hz) in input file \texttt{DATA/Par\_file}.\newline
 
 The code uses a constant $Q$ quality factor, write(IMAIN,*) "but approximated based on a series of Zener standard linear solids (SLS).
 The approximation is thus performed in a given frequency band determined based on that \texttt{ATTENUATION\_f0\_REFERENCE} reference frequency.
@@ -139,7 +139,7 @@ The example in Figure~\ref{fig:tomography_file} is for an external tomography fi
 2  -1 tomography elastic tomography_model.xyz 1
 \end{verbatim}
 %
-and the file \texttt{tomography\_model.xyz} will need to reside in \texttt{DATA/}. All entries in the second column of \texttt{materials\_file} will be \texttt{-1}, which means that each element in the mesh will be interpolated according to the values in \texttt{tomography\_model.xyz}.
+and the file \texttt{tomography\_model.xyz} will need to reside in \texttt{DATA/}. All entries in the second column of \texttt{materials\_file} will be \texttt{-1}, which means that each element in the mesh will be interpolated according to the values in \texttt{tomography\_model.xyz}.\newline
 
 In some cases it may be desirable to have an external tomography model that is described in more than one file. For example, in cases like southern California, the length scale of variation in the structure of the wave speed model is much shorter in the sedimentary basin models within the upper 15~km. Therefore one might want to use an external tomography file that is sampled with, say, $\Delta x = 1000$~m, $\Delta y = 1000$~m, and $\Delta z = 250$~m in the uppermost 15~km, and then use $\Delta x = 2000$~m, $\Delta y = 2000$~m, and $\Delta z = 1000$~m below a depth of 15~km. If these intervals are chosen appropriately, then it will result in a pair of external tomography file that is much smaller than the alternative of having a single file with the fine discretization. In this case  \texttt{nummaterial\_velocity\_file} is
 %
@@ -148,7 +148,7 @@ In some cases it may be desirable to have an external tomography model that is d
 2  -2 tomography elastic file_below_15km.xyz 1
 \end{verbatim}
 %
-and the files \texttt{file\_above\_15km.xyz} and \texttt{file\_below\_15km.xyz} will need to reside in \texttt{DATA/}.  All entries in the second column of \texttt{materials\_file} will need to be either \texttt{-1} or \texttt{-2}, depending on whether the element is above or below 15~km depth. In this sense, the construction of the mesh and the discretization of the external model will generally be done in tandem.
+and the files \texttt{file\_above\_15km.xyz} and \texttt{file\_below\_15km.xyz} will need to reside in \texttt{DATA/}.  All entries in the second column of \texttt{materials\_file} will need to be either \texttt{-1} or \texttt{-2}, depending on whether the element is above or below 15~km depth. In this sense, the construction of the mesh and the discretization of the external model will generally be done in tandem.\newline
 
 Other more complicated discretizations can be used following the same procedure. (In particular, there is no limit on the number of different external files that are used.)
 
@@ -233,15 +233,15 @@ Among other information, the header file indicates, for each dimension,
 the offset (\texttt{o1}, \texttt{o2} and \texttt{o3} fields),
 the spatial step size (\texttt{d1}, \texttt{d2} and \texttt{d3} fields)
 and the number of samples (\texttt{n1}, \texttt{n2} and \texttt{n3}) necessary to read
-the linked binary file (\texttt{in} field).
+the linked binary file (\texttt{in} field).\newline
 
 SEP model reading occurs during database generation. It it the user responsibility
 to ensure that proper interfaces between acoustic and elastic domains are set up
 during the meshing phase. For more information, refer to
-section~\ref{cha:Running-the-Mesher-Meshfem3D}.
+section~\ref{cha:Running-the-Mesher-Meshfem3D}.\newline
 
 In \texttt{DATA/Par\_file}, \texttt{\textbf{MODEL}} should be set to \texttt{\textbf{sep}},
-and \texttt{\textbf{SEP\_MODEL\_DIRECTORY}} should point to wherever your sep model files reside.
+and \texttt{\textbf{SEP\_MODEL\_DIRECTORY}} should point to wherever your sep model files reside.\newline
 
 Note that in order not to overload the parameter file, SEP header files
 should be named \texttt{vp.H}, \texttt{vs.H} and \texttt{rho.H}. The \texttt{in} field
@@ -249,7 +249,7 @@ in these binary files can be any path as long as it is relative to
 the previously set \texttt{SEP\_MODEL\_DIRECTORY}.
 We also assume that any dimensional value inside SEP header files is given in meters and
 that binary files are single precision floating point numbers stored in little endian format.
-There is currently only support for \texttt{vp}, \texttt{vs} and \texttt{rho} variables.
+There is currently only support for \texttt{vp}, \texttt{vs} and \texttt{rho} variables.\newline
 
 An example demonstrating the use SEP models is given in:
 \texttt{EXAMPLES/meshfem3D\_examples/sep\_bathymetry}.
