--- a/doc/USER_MANUAL/notes_and_acknowledgement.tex
+++ b/doc/USER_MANUAL/notes_and_acknowledgement.tex
@@ -7,14 +7,14 @@ In order to keep the software package thread-safe in case a multithreaded
 implementation of MPI is used, developers should not add modules or
 common blocks to the source code but rather use regular subroutine
 arguments (which can be grouped in ``derived types'' if needed for
-clarity).
+clarity).\newline
 
 The Gauss-Lobatto-Legendre subroutines in \texttt{gll\_library.f90}
 are based in part on software libraries from the Massachusetts Institute
 of Technology, Department of Mechanical Engineering (Cambridge, Massachusetts,
 USA). The non-structured global numbering software was provided by
 Paul F. Fischer (Brown University, Providence, Rhode Island, USA,
-now at Argonne National Laboratory, USA).
+now at Argonne National Laboratory, USA).\newline
 
 OpenDX \urlwithparentheses{http://www.opendx.org} is open-source
 based on IBM Data Explorer, AVS \urlwithparentheses{http://www.avs.com}
