user manual updated - minor updates

--- a/doc/USER_MANUAL/07_adjoint_simulations.tex
+++ b/doc/USER_MANUAL/07_adjoint_simulations.tex
@@ -202,8 +202,8 @@ system. This is done by setting \texttt{ANISOTROPIC\_KL} \texttt{=}
 The definition of the parameters $C_{IJ}$ in terms of the corresponding
 components $c_{ijkl},ijkl,i,j,k,l=1,2,3$ of the elastic tensor in
 cartesian coordinates follows \citet{ChTr07}. The 21 anisotropic
-kernels are saved in the \texttt{LOCAL\_PATH} in one file with the
-name of \texttt{proc??????\_cijkl\_kernel.bin} (with \texttt{proc??????}
+kernels are saved in the \texttt{LOCAL\_PATH} as 21 files with names 
+\texttt{proc??????\_c??\_kernel.bin} (with \texttt{proc??????}
 the processor number). The output kernels correspond to absolute perturbations
 $\delta C_{IJ}$ of the elastic parameters and their unit is in $s/GPa/km^{3}$.
 For consistency, the output density kernels with this option turned
